# MusicBot2

./: .coveragerc  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose-dev.yml  docker-compose-local.yml  docker-compose-prod.yml  docker-compose-pytest.yml  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: build.yml  ci-cd.yml  deploy.yml  pre-commit.yml  pytest.yml  python-test.yml
app/: main.py  second_parser.py  tests_parser.py
app/api/: Client.py  Queue.py  Song.py  VoiceState.py  client.py  player.py  queue.py  search.py  song.py  voice_state.py
app/commands/: __init__.py  clear.py  help.py  join.py  leave.py  play.py  queue.py  skip.py  stop.py  volume.py
app/commands/temp/: stop.py
app/core/: client.py  player.py  search.py  settings.py  utils.py
app/core/sc/: search.py
app/core/yt/: search.py
app/curd/: base.py
app/db/: deps.py  models.py  session.py  sessions.py  utils.py
app/models/: logs.py  servers.py
app/schemas/: connections.py  error.py  logs.py  queue.py  servers.py  song.py
app/tests/: conftest.py  test_help.py  test_join.py  test_queue.py  test_settings.py  test_utils.py  test_volume.py  test_yt_search.py  tests_parser.py
app/utility/: second_parser.py
compose/dev/: Dockerfile
compose/prod/: Dockerfile
development/local/: Dockerfile
development/local/pytest/: Dockerfile
docker/dev/: Dockerfile
docker/prod/: Dockerfile
