[tool.poetry]
name = "MusicBot2"
version = "0.0.0"
description = "Discord MusicBot2"
authors = ["xNykram"]

[tool.poetry.dependencies]
python = "3.11.3"
youtube_search = "2.1.2"
pydantic = "1.10.2"
yt-dlp = "2023.7.6"
pynacl = "1.5.0"
'discord.py' = "2.2.2"
requests="2.28.2"
beautifulsoup4="4.12.2"

[tool.poetry.dev-dependencies]
debugpy = "1.6.6"

[build-system]
requires = ["poetry>=1.5.1"]

[tool.black]
line-length = 88
include = '\.pyi?$'

[tool.isort]
atomic = true
profile = "black"
line_length = 88
skip_gitignore = true

[tool.pylint.messages-control]
disable = [
    "C0114","C0115","C0116","E1101","W0613","W0622"
]
