[tool.poetry]
name = "MusicBot2"
version = "0.0.0"
description = "A discord music bot written in Python."
authors = ["xNykram"]

[tool.poetry.dependencies]
python = "3.12.2"
youtube-search2 = "2.1.5"
pydantic = "2.4.2"
yt-dlp = "2024.3.10"
pynacl = "1.5.0"
'discord.py' = "2.3.2"
requests = "2.31.0"
beautifulsoup4 = "4.12.3"
pydantic-settings = "2.0.3"

[tool.poetry.dev-dependencies]
dpytest = "0.7.0"
pytest = "7.4.3"
pytest-asyncio = "0.21.1"
pytest-cov = "4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 99
target-version = "py38"
fix = true

select = [
  "E",
  "F",
  "B",
  "I",
  "RUF100",
  "PGH004",
  "UP",
]

[tool.ruff.isort]
combine-as-imports = true
extra-standard-library = ["typing_extensions"]

[tool.pytest.ini_options]
minversion = "6.0.0"
python_files = 'test*.py'
xfail_strict = true
addopts = "--cov=. --cov-report=html:coverage-report -p no:warnings"

[tool.coverage.run]
branch = true
parallel = true
omit = ["app/tests/*", "__init__.py", "main.py", "leave.py", "join.py", "skip.py", "volume.py", "play.py", "player.py","stop.py", "queue.py"]

[tool.coverage.report]
show_missing = true
fail_under = 75

[tool.mypy] # todo
ignore_missing_imports = true
ignore_errors = true
